custom-style.css
/* ... */
/* COMMENTS */


.comments-area { margin-top: 6rem; }

.comments-title {
    font-size: 3.6rem;
    line-height: 1.1;
    margin-bottom: 3rem;
}

.comment { margin-top: 4rem; }

.comment a { text-decoration: underline; }

.commentlist,
.commentlist .comment,
.commentlist ul.children {
    list-style: none;
    margin: 0 0 0 0;
}

.commentlist > .comment:first-child { margin-top: 0; }

li.comment li.comment { margin: 4rem 0 0 3rem; }

.comment-author a,
.comment-meta a,
.comment .reply a {
    text-decoration: none;
}

.comment-author {
    padding-left: 5rem;
    position: relative;
}

.bypostauthor .comment-author cite { font-weight: 700; }

.comment-author .says { display: none; }

.comment-author .avatar {
    border-radius: 9999rem;
    position: absolute;
        left: 0;
        top: .1rem;
    width: 4rem;
}

.comment-author cite {
    display: block;
    font-size: 1.8rem;
    font-style: normal;
    font-weight: 700;
    line-height: 1;
}

.comment-awaiting-moderation {
    font-size: 1.4rem;
    font-style: italic;
    padding-left: 5rem;
}

.comment-meta { 
    font-family: 'freight-sans-pro', Roboto, sans-serif;
    font-size: 1.6rem;
    margin: .2rem 0 2rem 0;
    padding-left: 5rem;
}

.comment-meta a,
.comment-meta a:hover { color: #999; }

.comment .reply {
    font-family: 'freight-sans-pro', Roboto, sans-serif;
    font-size: 1.4rem;
    margin-top: 1.5rem;
    text-align: right;
}

.comment .reply a { color: #999; }
.comment .reply a:hover { text-decoration: underline; }

.comment-content {
    font-family: 'freight-text-pro', Georgia, serif;
    font-size: 2rem;
}

.comment-content h1,
.comment-content h2,
.comment-content h3,
.comment-content h4,
.comment-content h5,
.comment-content h6 {
    font-size: 1.5em;
    font-family: 'freight-display-pro', 'Playfair Display', serif;
    text-align: left;
    font-style: none;
    font-weight: 700;
    margin: 2rem 0 1rem 0;
}

.comment-content *:last-child {
    margin-bottom: 0;
}

/* Respond ---------------------------- */

.commentlist + .comment-respond {
    margin-top: 4rem;
}

.comment-reply-title {
    font-size: 4rem;
    margin-bottom: 1.5rem;
}

.comment-form {
        display: -webkit-box;
        display: -ms-flexbox;
    display: flex;
    flex-wrap: wrap;
    font-family: 'freight-sans-pro', Roboto, sans-serif;
}

.comment-form input[type="text"],
.comment-form input[type="email"],
.comment-form input[type="url"],
.comment-form textarea,
.comment-form > * {
    width: 100%;
}

.comment-form .comment-form-author,
.comment-form .comment-form-email,
.comment-form .comment-form-url {
    width: calc( 33.33% - 1.33rem );
}

.comment-form .comment-form-email,
.comment-form .comment-form-url {
    margin-left: 2rem;
}

.comment-respond p + p { margin: 1rem 0 1rem 0; }

.post .comment-reply-title,
.logged-in-as,
.comment-notes { 
    text-align: center; 
}

.logged-in-as { margin: -10px 0 30px; }

.comment-respond label { display: block; }


/* ORGANIZERS */


.wcorg-organizers {
        -webkit-box-align: flex-start;
        -ms-flex-align: flex-start;
    align-items: flex-start;
        display: -webkit-box;
        display: -ms-flexbox;
    display: flex;
        -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin: 6rem 0 6rem 0;
    position: relative;
        left: calc( 50% - 45vw - 3rem );
    width: calc( 90vw + 3rem );
}

.wcorg-organizer {
        -ms-flex: 1 0 calc( 25% - 3rem );
        -webkit-flex: 1 0 calc( 25% - 3rem );
    flex: 1 0 calc( 25% - 3rem );
    margin: 0 0 3rem 3rem;
    max-width: calc( 25% - 3rem );
    padding-top: 8rem;
    position: relative;
    text-align: center;
}

.wcorg-organizer img {
    border-radius: 99rem;
    position: absolute;
        left: calc( 50% - 3rem );
        top: 0;
    width: 6rem;
}

.wcorg-organizer h2 {
    font-size: 2.4rem;
    line-height: 1.1;
    margin: 0 0 0 0;
}

.wcorg-organizer-description p {
    font-style: italic;
    margin-bottom: 0;
}



/* FOOTER */


.site-footer {
    background: rgba( 17, 17, 17, 1 );
    margin-top: 18rem;
}

#footer-widgets {
    margin: 0 auto 0 auto;
    max-width: 90%;
    width: 124rem;
}

#footer-widgets:after {
    content: "";
    clear: both;
    display: block;
}

body a.footer-block {
        -webkit-box-align: center;
        -ms-flex-align: center;
    align-items: center;
    color: rgba( 255, 255, 255, 1 );
        display: -webkit-box;
        display: -ms-flexbox;
    display: flex;
    height: 40rem;
    float: left;
    margin-top: -8rem;
        -webkit-box-pack: center;
        -ms-flex-pack: center;
    justify-content: center;
    text-shadow: 0 .1rem 0 rgba( 0, 0, 0, 0.1 );
    width: 50%;
}

.footer-block:hover {
    color: rgba( 255, 255, 255, 1 );
}

.footer-block.blue {
    background-image: linear-gradient(-135deg, #549CF9 0%, #096DAE 100%);
}

.footer-block.yellow {
    background-image: linear-gradient(-225deg, #FAD24E 0%, #E9B700 100%);
}

.inner-block {
    width: 36rem;
    max-width: 90%;
    margin: 0 auto 0 auto;
    text-align: center;
}

.footer-block p {
    margin: 0 0 0 0;
}


/* CREDITS */


.site-info {
    padding: 4.1rem 0 4.1rem 0;
    text-align: center;
}

.site-info .site-info-generator {
    color: rgba( 255, 255, 255, 1 );
    font-family: 'freight-sans-pro', Roboto, sans-serif;
    font-size: 1.6rem;
    font-weight: 600;
    letter-spacing: .1rem;
    text-transform: uppercase;
}

.site-info .site-info-network {
    display: none;
}


/* TRANSITIONS */


body .site-navigation .twitter-link a {
        -webkit-transition: all .1s ease-in-out;
        -moz-transition:    all .1s ease-in-out;
        -o-transition:      all .1s ease-in-out;
    transition:             all .1s ease-in-out;
}

.hero .intro-arrow,
.shortcut:before {
        -webkit-transition: all .2s ease-in-out;
        -moz-transition:    all .2s ease-in-out;
        -o-transition:      all .2s ease-in-out;
    transition:             all .2s ease-in-out;
}
/* ... */

